[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FilyManaging"
version = "0.0.1"
authors = [
  { name="lunahd24", email="" },
]
description = "A file managing tool for python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LunaHD24/FilyManaging"
"Bug Tracker" = "https://github.com/LunaHD24/FilyManaging/issues"